# pq_verification

./: .gitignore  LICENSE  README.md  flake.nix  pq-verification.cabal  stack.yaml
code/: flake.nix  pq-verification.cabal  stack.yaml
code/src/: Example.hs
code/src/PriorityQueue/: Base.hs  BinomialHeap.hs  BionomialHeap.hs  Example.hs  LeftistHeap.hs  Lib.hs
code/test/: ExampleTests.hs  Main.hs
code/test/PriorityQueue/: BinomialHeapTests.hs  LeftistHeapTests.hs
presentation/: README.md  pnpm-lock.yaml
src/PriorityQueue/: Example.hs  Lib.hs
thesis/: flake.nix  hardcover_titlepage.tex  references.bib  thesis.bbl-SAVE-ERROR  thesis.bcf-SAVE-ERROR  thesis.tex
thesis/content/: abstract.tex  acknowledgments.tex  appendix.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  main.tex  variables.tex
thesis/figures/: binomial.tex  leftistHeap.tex  plist.tex
