cabal-version: 1.12

name:           pq-verification
version:        0.1.0.0
description:    This project is a demonstration of how to use Liquid Haskell to verify properties of a priority queue implementation.
homepage:
bug-reports:
author:         Mehran Shahidi
maintainer:     m.mehrashahidi@gmil.com
copyright:      2025 Mehran.shahidi
license:        MIT
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
      PriorityQueue.LeftistHeap
      PriorityQueue.Example
      PriorityQueue.BionomialHeap
      PriorityQueue.Base

  hs-source-dirs:
      src
  build-depends:
      liquid-prelude,
      liquid-vector,
      liquidhaskell,
      base,
      containers,
      vector
  default-language: Haskell2010
  ghc-options:  -fplugin=LiquidHaskell 

test-suite priority-queue
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base,
    pq-verification,
    tasty,
    tasty-hunit
  default-language: Haskell2010
